# Copyright (C) 2024-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/filemanagement/dfs_service/distributedfile.gni")

ohos_unittest("account_status_listener_test") {
  module_out_path = "dfs_service/dfs_service"

  include_dirs = [
    "${distributedfile_path}/frameworks/native/cloudsync_kit_inner_lite/include",
    "${distributedfile_path}/frameworks/native/cloudsync_kit_inner/include",
    "${distributedfile_path}/utils/log/include",
    "${distributedfile_path}/utils/ioctl/include",
    "${innerkits_native_path}/cloud_daemon_kit_inner",
    "${innerkits_native_path}/cloud_file_kit_inner/big_data_statistics",
    "${services_path}/cloudfiledaemon/include/",
    "${services_path}/cloudfiledaemon/include/cloud_disk/",
    "${services_path}/cloudfiledaemon/include/fuse_manager/",
    "${services_path}/cloudfiledaemon/include/ipc/",
    "${services_path}/cloudfiledaemon/include/utils/",
    "mock",
  ]

  sources = [
    "${services_path}/cloudfiledaemon/src/cloud_disk/account_status.cpp",
    "${services_path}/cloudfiledaemon/src/cloud_disk/account_status_listener.cpp",
    "${services_path}/cloudfiledaemon/src/cloud_disk/file_operations_helper.cpp",
    "${services_path}/cloudfiledaemon/src/fuse_manager/cloud_daemon_statistic.cpp",
    "${services_path}/cloudfiledaemon/src/fuse_manager/fuse_manager.cpp",
    "${services_path}/cloudfiledaemon/src/utils/setting_data_helper.cpp",
    "account_status_listener_test.cpp",
    "mock/data_syncer_rdb_store.cpp",
    "mock/result_set.cpp",
  ]

  deps = [
    "${clouddisk_database_path}:clouddisk_database",
    "${innerkits_native_path}/cloud_file_kit_inner:cloudfile_kit_core",
    "${innerkits_native_path}/cloudsync_kit_inner:cloudsync_kit_inner",
    "${innerkits_native_path}/cloudsync_kit_inner:cloudsync_kit_inner_lite",
    "${utils_path}:libdistributedfiledentry",
    "${utils_path}:libdistributedfileutils",
    "${utils_path}:libdistributedfileutils_lite",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:dataobs_manager",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "data_share:datashare_consumer",
    "ffrt:libffrt",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "init:libbegetutil",
    "ipc:ipc_single",
    "libfuse:libfuse",
    "os_account:os_account_innerkits",
    "relational_store:native_rdb",
  ]

  defines = [
    "private=public",
    "LOG_DOMAIN=0xD004308",
    "LOG_TAG=\"CLOUD_DAEMON_API\"",
  ]

  use_exceptions = true
}

ohos_unittest("file_operations_cloud_test") {
  module_out_path = "dfs_service/dfs_service"

  include_dirs = [
    "${distributedfile_path}/adapter/cloud_adapter_example/include",
    "${distributedfile_path}/interfaces/inner_api/native/cloudsync_kit_inner",
    "${distributedfile_path}/utils/log/include",
    "${distributedfile_path}/utils/ioctl/include",
    "${services_path}/clouddisk_database/include",
    "${services_path}/cloudfiledaemon/include/cloud_disk/",
    "${services_path}/cloudfiledaemon/src/cloud_disk/",
    "mock",
  ]

  sources = [
    "${distributedfile_path}/test/mock/clouddisk_notify_mock.cpp",
    "${distributedfile_path}/test/unittests/cloud_disk/mock/file_operations_helper_mock.cpp",
    "${distributedfile_path}/test/unittests/clouddisk_database/mock/meta_file_clouddisk_mock.cpp",
    "${distributedfile_path}/test/unittests/cloudsync_sa/mock/cloud_file_utils_mock.cpp",
    "${services_path}/cloudfiledaemon/src/cloud_disk/account_status.cpp",
    "${services_path}/cloudfiledaemon/src/cloud_disk/database_manager.cpp",
    "${services_path}/cloudfiledaemon/src/cloud_disk/file_operations_base.cpp",
    "${services_path}/cloudfiledaemon/src/cloud_disk/file_operations_cloud.cpp",
    "file_operations_cloud_test.cpp",
    "mock/assistant.cpp",
    "mock/clouddisk_rdbstore_mock.cpp",
    "mock/libfuse_mock.cpp",
    "mock/system_function_mock.cpp",
  ]

  deps = [
    "${clouddisk_database_path}:clouddisk_database",
    "${innerkits_native_path}/cloud_file_kit_inner:cloudfile_kit",
    "${utils_path}:libdistributedfiledentry",
    "${utils_path}:libdistributedfileutils",
    "${utils_path}:libdistributedfileutils_lite",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:dataobs_manager",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "ffrt:libffrt",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "init:libbegetutil",
    "ipc:ipc_single",
    "libfuse:libfuse",
    "relational_store:native_rdb",
  ]

  defines = [
    "private=public",
    "LOG_DOMAIN=0xD004308",
    "LOG_TAG=\"CLOUD_DAEMON_API\"",
  ]

  if (cloudsync_service_hicollie_enable) {
    external_deps += [ "hicollie:libhicollie" ]
    defines += [ "HICOLLIE_ENABLE" ]
  }

  use_exceptions = true
}

ohos_unittest("file_operations_cloud_static_test") {
  module_out_path = "dfs_service/dfs_service"

  include_dirs = [
    "${distributedfile_path}/adapter/cloud_adapter_example/include",
    "${distributedfile_path}/interfaces/inner_api/native/cloudsync_kit_inner",
    "${distributedfile_path}/utils/log/include",
    "${distributedfile_path}/utils/ioctl/include",
    "${services_path}/clouddisk_database/include",
    "${services_path}/cloudfiledaemon/include/cloud_disk/",
    "${services_path}/cloudfiledaemon/src/cloud_disk/",
    "mock",
  ]

sources = [
    "${distributedfile_path}/services/cloudfiledaemon/src/cloud_disk/file_operations_helper.cpp",
    "${distributedfile_path}/test/unittests/cloudsync_sa/mock/cloud_file_utils_mock.cpp",
    "${services_path}/cloudfiledaemon/src/cloud_disk/account_status.cpp",
    "${services_path}/cloudfiledaemon/src/cloud_disk/database_manager.cpp",
    "${services_path}/cloudfiledaemon/src/cloud_disk/file_operations_base.cpp",
    "${services_path}/cloudfiledaemon/src/cloud_disk/file_operations_local.cpp",    
    "${services_path}/cloudfiledaemon/src/cloud_disk/fuse_operations.cpp",
    "file_operations_cloud_static_test.cpp",
    "mock/libfuse_mock.cpp",
  ]

  deps = [
    "${clouddisk_database_path}:clouddisk_database",
    "${innerkits_native_path}/cloud_file_kit_inner:cloudfile_kit",
    "${utils_path}:libdistributedfiledentry",
    "${utils_path}:libdistributedfileutils",
    "${utils_path}:libdistributedfileutils_lite",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:dataobs_manager",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "ffrt:libffrt",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "init:libbegetutil",
    "ipc:ipc_single",
    "json:nlohmann_json_static",
    "libfuse:libfuse",
    "relational_store:native_rdb",
  ]

  defines = [
    "private=public",
    "LOG_DOMAIN=0xD004308",
    "LOG_TAG=\"CLOUD_DAEMON_API\"",
  ]

  if (cloudsync_service_hicollie_enable) {
    external_deps += [ "hicollie:libhicollie" ]
    defines += [ "HICOLLIE_ENABLE" ]
  }

  use_exceptions = true
}

ohos_unittest("database_manager_test") {
  module_out_path = "dfs_service/dfs_service"

  include_dirs = [
    "${distributedfile_path}/utils/log/include",
    "${distributedfile_path}/interfaces/inner_api/native/cloudsync_kit_inner/",
    "${distributedfile_path}/interfaces/inner_api/native/cloud_file_kit_inner/",
    "${distributedfile_path}/frameworks/native/cloudsync_kit_inner/include/",
    "${distributedfile_path}/frameworks/native/cloudsync_kit_inner_lite/include/",
    "${distributedfile_path}/test/unittests/cloudsync_sa/mock/",
    "${services_path}/cloudfiledaemon/include/cloud_disk/",
    "${services_path}/clouddisk_database/include/",
  ]

  sources = [
    "${distributedfile_path}/frameworks/native/cloudsync_kit_inner/src/cloud_sync_manager.cpp",
    "${services_path}/clouddisk_database/src/clouddisk_rdb_transaction.cpp",
    "${services_path}/clouddisk_database/src/clouddisk_rdb_utils.cpp",
    "${services_path}/clouddisk_database/src/clouddisk_rdbstore.cpp",
    "${services_path}/clouddisk_database/src/clouddisk_sync_helper.cpp",
    "${services_path}/clouddisk_database/src/file_column.cpp",
    "${services_path}/cloudfiledaemon/src/cloud_disk/database_manager.cpp",
    "database_manager_test.cpp",
  ]

  deps = [
    "${innerkits_native_path}/cloudsync_kit_inner:cloudsync_kit_inner_lite",
    "${innerkits_native_path}/cloud_file_kit_inner:cloudfile_kit_core",
    "${utils_path}:libdistributedfiledentry",
    "${utils_path}:libdistributedfileutils",
    "${utils_path}:libdistributedfileutils_lite",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:dataobs_manager",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "dfs_service:cloudsync_kit_inner",
    "ffrt:libffrt",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "init:libbegetutil",
    "ipc:ipc_single",
    "libfuse:libfuse",
    "preferences:native_preferences",
    "relational_store:native_rdb",
    "samgr:samgr_proxy",
  ]

  defines = [
    "private=public",
    "LOG_DOMAIN=0xD004308",
    "LOG_TAG=\"CLOUD_DAEMON_API\"",
  ]

  use_exceptions = true
}

ohos_unittest("file_operations_base_test") {
  module_out_path = "dfs_service/dfs_service"

  include_dirs = [
    "${distributedfile_path}/utils/log/include",
    "${services_path}/cloudfiledaemon/include/cloud_disk/",
    "${distributedfile_path}/test/unittests/cloud_disk/mock/",
    "${distributedfile_path}/services/clouddisk_database/include/",
  ]

  sources = [
    "${services_path}/cloudfiledaemon/src/cloud_disk/file_operations_base.cpp",
    "${services_path}/cloudfiledaemon/src/cloud_disk/file_operations_helper.cpp",
    "file_operations_base_test.cpp",
    "mock/assistant.cpp",
    "mock/clouddisk_rdbstore_mock.cpp",
    "mock/libfuse_mock.cpp",
    "mock/system_function_mock.cpp",
  ]

  deps = [
    "${innerkits_native_path}/cloud_file_kit_inner:cloudfile_kit",
    "${utils_path}:libdistributedfiledentry",
    "${utils_path}:libdistributedfileutils",
    "${utils_path}:libdistributedfileutils_lite",
  ]

  external_deps = [
    "ability_base:want",
    "common_event_service:cesfwk_innerkits",
    "ffrt:libffrt",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "libfuse:libfuse",
    "relational_store:native_rdb",
  ]

  defines = [
    "private=public",
    "LOG_DOMAIN=0xD004308",
    "LOG_TAG=\"CLOUD_DAEMON_API\"",
  ]

  use_exceptions = true
}

ohos_unittest("fuse_operations_test") {
  module_out_path = "dfs_service/dfs_service"

  include_dirs = [
    "${distributedfile_path}/utils/log/include",
    "${distributedfile_path}/utils/ioctl/include",
    "${services_path}/cloudfiledaemon/include/cloud_disk/",
    "${distributedfile_path}/test/unittests/cloudsync_sa/mock/",
    "${distributedfile_path}/test/unittests/cloud_disk/mock/",
  ]

  sources = [
    "${distributedfile_path}/test/unittests/cloudsync_sa/mock/parameters.cpp",
    "${services_path}/cloudfiledaemon/src/cloud_disk/account_status.cpp",
    "${services_path}/cloudfiledaemon/src/cloud_disk/database_manager.cpp",
    "${services_path}/cloudfiledaemon/src/cloud_disk/file_operations_base.cpp",
    "${services_path}/cloudfiledaemon/src/cloud_disk/file_operations_cloud.cpp",
    "${services_path}/cloudfiledaemon/src/cloud_disk/file_operations_helper.cpp",
    "${services_path}/cloudfiledaemon/src/cloud_disk/fuse_operations.cpp",
    "fuse_operations_test.cpp",
    "mock/clouddisk_rdbstore_mock.cpp",
    "mock/file_operations_local_mock.cpp",
    "mock/libfuse_mock.cpp",
  ]

  deps = [
    "${clouddisk_database_path}:clouddisk_database",
    "${innerkits_native_path}/cloud_file_kit_inner:cloudfile_kit",
    "${utils_path}:libdistributedfileutils",
    "${utils_path}:libdistributedfileutils_lite",
  ]

  cflags = [ "--coverage" ]

  ldflags = [ "--coverage" ]

  cflags_cc = [ "--coverage" ]

  external_deps = [
    "ability_runtime:dataobs_manager",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "ffrt:libffrt",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "ipc:ipc_single",
    "libfuse:libfuse",
    "relational_store:native_rdb",
  ]

  defines = [
    "private=public",
    "LOG_DOMAIN=0xD004308",
    "LOG_TAG=\"CLOUD_DAEMON_API\"",
  ]

  if (cloudsync_service_hicollie_enable) {
    external_deps += [ "hicollie:libhicollie" ]
    defines += [ "HICOLLIE_ENABLE" ]
  }

  use_exceptions = true
}

ohos_unittest("file_operations_local_test") {
  module_out_path = "dfs_service/dfs_service"

  include_dirs = [
    "${distributedfile_path}/utils/log/include",
    "${distributedfile_path}/utils/ioctl/include",
    "${services_path}/cloudfiledaemon/include/cloud_disk/",
    "${distributedfile_path}/test/unittests/cloudsync_sa/mock/",
    "${distributedfile_path}/test/unittests/cloud_disk/mock/",
  ]

  sources = [
    "${distributedfile_path}/test/unittests/cloud_disk/mock/file_operations_helper_mock.cpp",
    "${distributedfile_path}/test/unittests/cloudsync_sa/mock/parameters.cpp",
    "${services_path}/cloudfiledaemon/src/cloud_disk/account_status.cpp",
    "${services_path}/cloudfiledaemon/src/cloud_disk/database_manager.cpp",
    "${services_path}/cloudfiledaemon/src/cloud_disk/file_operations_base.cpp",
    "${services_path}/cloudfiledaemon/src/cloud_disk/file_operations_cloud.cpp",
    "${services_path}/cloudfiledaemon/src/cloud_disk/file_operations_local.cpp",
    "${services_path}/cloudfiledaemon/src/cloud_disk/fuse_operations.cpp",
    "file_operations_local_test.cpp",
    "mock/clouddisk_rdbstore_mock.cpp",
    "mock/libfuse_mock.cpp",
  ]

  deps = [
    "${clouddisk_database_path}:clouddisk_database",
    "${innerkits_native_path}/cloud_file_kit_inner:cloudfile_kit",
    "${utils_path}:libdistributedfileutils",
    "${utils_path}:libdistributedfileutils_lite",
  ]

  cflags = [ "--coverage" ]

  ldflags = [ "--coverage" ]

  cflags_cc = [ "--coverage" ]

  external_deps = [
    "ability_runtime:dataobs_manager",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "ffrt:libffrt",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "ipc:ipc_single",
    "libfuse:libfuse",
    "relational_store:native_rdb",
  ]

  defines = [
    "private=public",
    "LOG_DOMAIN=0xD004308",
    "LOG_TAG=\"CLOUD_DAEMON_API\"",
  ]

  if (cloudsync_service_hicollie_enable) {
    external_deps += [ "hicollie:libhicollie" ]
    defines += [ "HICOLLIE_ENABLE" ]
  }

  use_exceptions = true
}

ohos_unittest("file_operations_helper_test") {
  module_out_path = "dfs_service/dfs_service"

  include_dirs = [
    "${distributedfile_path}/utils/log/include",
    "${distributedfile_path}/utils/ioctl/include",
    "${services_path}/cloudfiledaemon/include/cloud_disk/",
    "${distributedfile_path}/test/unittests/cloudsync_sa/mock/",
    "${distributedfile_path}/test/unittests/cloud_disk/mock/",
  ]

  sources = [
    "${distributedfile_path}/test/unittests/cloudsync_sa/mock/parameters.cpp",
    "${services_path}/cloudfiledaemon/src/cloud_disk/account_status.cpp",
    "${services_path}/cloudfiledaemon/src/cloud_disk/database_manager.cpp",
    "${services_path}/cloudfiledaemon/src/cloud_disk/file_operations_base.cpp",
    "${services_path}/cloudfiledaemon/src/cloud_disk/file_operations_cloud.cpp",
    "${services_path}/cloudfiledaemon/src/cloud_disk/file_operations_helper.cpp",
    "${services_path}/cloudfiledaemon/src/cloud_disk/file_operations_local.cpp",
    "file_operations_helper_test.cpp",
    "mock/assistant.cpp",
    "mock/clouddisk_rdbstore_mock.cpp",
    "mock/libfuse_mock.cpp",
    "mock/system_function_mock.cpp",
  ]

  deps = [
    "${clouddisk_database_path}:clouddisk_database",
    "${innerkits_native_path}/cloud_file_kit_inner:cloudfile_kit",
    "${utils_path}:libdistributedfileutils",
    "${utils_path}:libdistributedfileutils_lite",
  ]

  cflags = [ "--coverage" ]

  ldflags = [ "--coverage" ]

  cflags_cc = [ "--coverage" ]

  external_deps = [
    "ability_runtime:dataobs_manager",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "ffrt:libffrt",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "ipc:ipc_single",
    "libfuse:libfuse",
    "relational_store:native_rdb",
  ]

  defines = [
    "private=public",
    "LOG_DOMAIN=0xD004308",
    "LOG_TAG=\"CLOUD_DAEMON_API\"",
  ]

  if (cloudsync_service_hicollie_enable) {
    external_deps += [ "hicollie:libhicollie" ]
    defines += [ "HICOLLIE_ENABLE" ]
  }

  use_exceptions = true
}

ohos_unittest("file_range_lock_test") {
  module_out_path = "dfs_service/dfs_service"

  include_dirs = [
    "${distributedfile_path}/utils/dentry/include",
    "${distributedfile_path}/utils/log/include",
    "${distributedfile_path}/utils/inner_api",
    "${services_path}/cloudfiledaemon/include/cloud_disk/",
    "mock",
  ]

  sources = [
    "${distributedfile_path}/utils/dentry/src/file_utils.cpp",
    "${distributedfile_path}/utils/log/src/utils_log.cpp",
    "mock/assistant.cpp",
    "mock/system_function_mock.cpp",
    "file_range_lock_test.cpp",
  ]

  deps = []

  external_deps = [
    "c_utils:utils",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "libfuse:libfuse",
  ]

  defines = [
    "private=public",
    "LOG_DOMAIN=0xD004308",
    "LOG_TAG=\"CLOUD_DAEMON_API\"",
  ]

  if (cloudsync_service_hicollie_enable) {
    external_deps += [ "hicollie:libhicollie" ]
    defines += [ "HICOLLIE_ENABLE" ]
  }

  use_exceptions = true
}

ohos_unittest("meta_file_clouddisk_test") {
  module_out_path = "dfs_service/dfs_service"

  include_dirs = [
    "${distributedfile_path}/utils/dentry/include",
    "${distributedfile_path}/utils/log/include",
    "${distributedfile_path}/utils/inner_api",
    "${distributedfile_path}/utils/system/include",
    "${services_path}/cloudfiledaemon/include/cloud_disk/",
    "mock",
  ]

  sources = [
    "${distributedfile_path}/utils/dentry/src/meta_file.cpp",
    "${distributedfile_path}/utils/log/src/utils_log.cpp",
    "${distributedfile_path}/utils/system/src/utils_directory.cpp",
    "${distributedfile_path}/test/unittests/cloudsync_sa/mock/cloud_file_utils_mock.cpp",
    "mock/assistant.cpp",
    "mock/file_utils_mock.cpp",
    "mock/system_function_mock.cpp",
    "meta_file_clouddisk_test.cpp",
  ]

  deps = []

  external_deps = [
    "c_utils:utils",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "json:nlohmann_json_static",
    "libfuse:libfuse",
  ]

  defines = [
    "private=public",
    "LOG_DOMAIN=0xD004308",
    "LOG_TAG=\"CLOUD_DAEMON_API\"",
  ]

  if (cloudsync_service_hicollie_enable) {
    external_deps += [ "hicollie:libhicollie" ]
    defines += [ "HICOLLIE_ENABLE" ]
  }

  use_exceptions = true
}

ohos_unittest("io_message_listener_test") {
  module_out_path = "dfs_service/dfs_service"

  include_dirs = [
    "${distributedfile_path}/adapter/cloud_adapter_example/include",
    "${distributedfile_path}/interfaces/inner_api/native/cloudsync_kit_inner",
    "${distributedfile_path}/utils/log/include",
    "${services_path}/clouddisk_database/include",
    "${services_path}/cloudfiledaemon/include/cloud_disk/",
    "${services_path}/cloudfiledaemon/src/cloud_disk/",
    "mock",
  ]

  sources = [
    "${services_path}/cloudfiledaemon/src/cloud_disk/io_message_listener.cpp",
    "io_message_listener_test.cpp",
  ]

  deps = [
    "${clouddisk_database_path}:clouddisk_database",
    "${innerkits_native_path}/cloud_file_kit_inner:cloudfile_kit",
    "${utils_path}:libdistributedfiledentry",
    "${utils_path}:libdistributedfileutils",
    "${utils_path}:libdistributedfileutils_lite",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:dataobs_manager",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "ffrt:libffrt",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "init:libbegetutil",
    "ipc:ipc_single",
    "libfuse:libfuse",
    "relational_store:native_rdb",
    "ability_runtime:app_manager",
  ]

  defines = [
    "private=public",
    "LOG_DOMAIN=0xD004308",
    "LOG_TAG=\"CLOUD_DAEMON_API\"",
  ]

  if (cloudsync_service_hicollie_enable) {
    external_deps += [ "hicollie:libhicollie" ]
    defines += [ "HICOLLIE_ENABLE" ]
  }

  use_exceptions = true
}

ohos_unittest("appstate_observer_test") {
  module_out_path = "dfs_service/dfs_service"

  include_dirs = [
    "${distributedfile_path}/adapter/cloud_adapter_example/include",
    "${distributedfile_path}/interfaces/inner_api/native/cloudsync_kit_inner",
    "${distributedfile_path}/utils/log/include",
    "${services_path}/clouddisk_database/include",
    "${services_path}/cloudfiledaemon/include/cloud_disk/",
    "${services_path}/cloudfiledaemon/src/cloud_disk/",
    "mock",
  ]

  sources = [
    "${services_path}/cloudfiledaemon/src/cloud_disk/appstate_observer.cpp",
    "${services_path}/cloudfiledaemon/src/cloud_disk/io_message_listener.cpp",
    "appstate_observer_test.cpp",
  ]

  deps = [
    "${clouddisk_database_path}:clouddisk_database",
    "${innerkits_native_path}/cloud_file_kit_inner:cloudfile_kit",
    "${utils_path}:libdistributedfiledentry",
    "${utils_path}:libdistributedfileutils",
    "${utils_path}:libdistributedfileutils_lite",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:dataobs_manager",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "ffrt:libffrt",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "ipc:ipc_single",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "init:libbegetutil",
    "libfuse:libfuse",
    "relational_store:native_rdb",
    "ability_runtime:app_manager",
  ]

  defines = [
    "private=public",
    "protected=public",
    "LOG_DOMAIN=0xD004308",
    "LOG_TAG=\"CLOUD_DAEMON_API\"",
  ]

  if (cloudsync_service_hicollie_enable) {
    external_deps += [ "hicollie:libhicollie" ]
    defines += [ "HICOLLIE_ENABLE" ]
  }

  use_exceptions = true
}

group("cloud_disk_test") {
  testonly = true

  deps = [
    ":account_status_listener_test",
    ":database_manager_test",
    ":file_operations_base_test",
    ":file_operations_cloud_test",
    ":file_operations_cloud_static_test",
    ":file_operations_helper_test",
    ":file_operations_local_test",
    ":fuse_operations_test",
    ":file_range_lock_test",
    ":meta_file_clouddisk_test",
    ":io_message_listener_test",
    ":appstate_observer_test",
  ]
}
